--- a/section-50.adoc
+++ b/section-50.adoc
@@ -8,15 +8,14 @@ planes that carry bombs and/or engage in air-to-air combat.  Ammunition is
 consumed in terms of Ammunition Points at rates of consumption dependent on the
 weapon-type firing. A unit without ammunition is useless in terms of combat.
 Players must keep track of the ammo supply of each TOE Strength Point. Each TOE
-Strerigth Point may carry (i.e., transport by itself without trucks) only enough
+Strength Point may carry (i.e., transport by itself without trucks) only enough
 ammo to fire once. However, units may always use ammo present in the hex (either
 in attached trucks orinasupply dump).
 
 CASES:
 
 [#50_1]
-=== CONSUMPTION OF
-AMMUNTION
+=== CONSUMPTION OF AMMUNTION
 
 [#50_11]
 *[50.11]* All ammunition is considered in terms of Ammunition Points.
