--- a/section-51.adoc
+++ b/section-51.adoc
@@ -2,7 +2,7 @@
 == STORES
 GENERAL RULE:
 
-The term "stores'? encompasses everything that isn't fuel, ammunition or water.
+The term "stores" encompasses everything that isn't fuel, ammunition or water.
 This includes food (which is what most playtesters ended up calling stores),
 paper, uniforms, and whatever else was used and needed to keep going. Stores are
 different from other types of supply in that they are distributed at the
@@ -23,15 +23,14 @@ per Game-Turn, except as noted below.
 Prisoner Points per Operations Stage. (See <<28_15,28.15>>). Prisoners must be
 supplied with Stores before any other units. For this purpose only, if there are
 no Stores in the hex, Stores may be deducted from the nearest supply dump,
-regardless of how far away itis.
+regardless of how far away it is.
 
 [#51_13]
 *[51.13]* HQ and engineer units require only one Stores Point per
 Game-Turn.
 
 [#51_14]
-*[51.14]* Stores may have to be expended during construction. See
-<<24_0,24.0>>.
+*[51.14]* Stores may have to be expended during construction. See <<24_0,24.0>>.
 
 [#51_15]
 *[51.15]* Each Stores Point weighs one ton. Stores may be transported by
@@ -40,7 +39,7 @@ to be used. Stores on truck convoys cannot be used until off-loaded.
 
 [#51_16]
 *[51.16]* Fifty per cent of any captured Stores Points may be used by
-the opposing Player; the rest are lost. ;
+the opposing Player; the rest are lost.
 
 [#51_17]
 *[51.17]* Guard points require two Stores points per Game-Turn each.
