--- a/section-54.adoc
+++ b/section-54.adoc
@@ -45,7 +45,7 @@ modifies the die roll if necessary for unit size, dump ownership, location, etc.
 The Player may adjust the die roll by announcing, before rolling the die, that
 he is expending an additional one-third or two-thirds of the attempting unit's
 basic CPA. Cross index the modified die roll with the percentage of supplies row
-on the Supply Dump Demolition Table  <<54_17,54.17>>) to determine the percentage of
+on the Supply Dump Demolition Table  (<<54_17,54.17>>) to determine the percentage of
 each type of supply in the dump that is destroyed. In addition, a unit occupying
 the same hex as a supply dump may attempt to blow that dump as part of a retreat
 before combat. The Player may only expend one-third of the unit's basic CPA and
@@ -77,7 +77,9 @@ The use and mechanics of trucks is discussed in many places. Let it suffice to
 repeat that it is of primary importance that the Player set up a system whereby
 his trucks are constantly in use, ferrying supplies forward as fast as they can.
 The carrying capacities of one Truck Point for each type of truck are listed on
-the Chart; see Charts and Tables.  *It requires two light trucks to carry one
+the Chart; see Charts and Tables.  
+
+It requires two light trucks to carry one
 TOE Point of infantry; it is suggested that light trucks not be used for this
 task.
 
